<resources>
    <string name="app_name">Recode Commerce</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="product">Products</string>
    <string name="dashboard">Dashboard</string>
    <string name="taxonomies">Taxonomies</string>
    <string name="hint_taxonomy_name">Taxonomy Name</string>
    <string name="hint_taxon_name">Default Taxon</string>
    <string name="btn_create_taxonomy">Create Taxonomy </string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_shipping_category_id">Shipping Category ID</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_id">Product ID</string>
    <string name="err_msg_name_product">Name is empty</string>
    <string name="err_msg_product_id">Product Id is null</string>
    <string name="err_msg_product_price">Product Price is null</string>
    <string name="btn_get_products">Get Product</string>
    <string name="btn_create_product">Create Product</string>
    <string name="checkout">Checkout</string>
    <string name="edit_product">Details</string>
    <string name="search">Search Products</string>
    <string name="title_activity_edit_product">Edit Product</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_login">LOGIN</string>
    <string name="msg_enter_store_credentials">Enter your store credentials</string>
    <string name="title_activity_login">Login</string>
    <string name="orders">Orders</string>
    <string name="title_activity_orders">Orders</string>
    <string name="scan">Scan Barcode</string>
    <string name="upload">Upload Image</string>
    <string name="title_activity_licenses_activity">Licenses</string>
    <string name="licence_mit">
    \nPermission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all
    copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    SOFTWARE
    </string>
    <string name="licence_apache">\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n\thttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="ic_access_alarms">&#xe000;</string>
    <string name="ic_access_time">&#xe001;</string>
    <string name="ic_accessibility">&#xe002;</string>
    <string name="ic_account_box">&#xe003;</string>
    <string name="ic_account_circle">&#xe004;</string>
    <string name="ic_adb">&#xe005;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_add_alarm">&#xe007;</string>
    <string name="ic_add_box">&#xe008;</string>
    <string name="ic_add_circle">&#xe009;</string>
    <string name="ic_add_circle_outline">&#xe00a;</string>
    <string name="ic_airplane_mode_off">&#xe00b;</string>
    <string name="ic_airplane_mode_on">&#xe00c;</string>
    <string name="ic_android">&#xe00d;</string>
    <string name="ic_apps">&#xe00e;</string>
    <string name="ic_archive">&#xe00f;</string>
    <string name="ic_arrow_back">&#xe010;</string>
    <string name="ic_arrow_drop_down">&#xe011;</string>
    <string name="ic_arrow_drop_down_circle">&#xe012;</string>
    <string name="ic_arrow_drop_up">&#xe013;</string>
    <string name="ic_arrow_forward">&#xe014;</string>
    <string name="ic_attachment">&#xe015;</string>
    <string name="ic_auto_fix">&#xe016;</string>
    <string name="ic_backspace">&#xe017;</string>
    <string name="ic_backup">&#xe018;</string>
    <string name="ic_beenhere">&#xe019;</string>
    <string name="ic_block">&#xe01a;</string>
    <string name="ic_bluetooth">&#xe01b;</string>
    <string name="ic_bluetooth_audio">&#xe01c;</string>
    <string name="ic_bluetooth_connected">&#xe01d;</string>
    <string name="ic_bluetooth_disabled">&#xe01e;</string>
    <string name="ic_bluetooth_searching">&#xe01f;</string>
    <string name="ic_bold">&#xe020;</string>
    <string name="ic_book">&#xe021;</string>
    <string name="ic_bookmark">&#xe022;</string>
    <string name="ic_bookmark_outline">&#xe023;</string>
    <string name="ic_brightness_auto">&#xe024;</string>
    <string name="ic_brightness_high">&#xe025;</string>
    <string name="ic_brightness_low">&#xe026;</string>
    <string name="ic_brightness_medium">&#xe027;</string>
    <string name="ic_bug_report">&#xe028;</string>
    <string name="ic_cake">&#xe029;</string>
    <string name="ic_call">&#xe02a;</string>
    <string name="ic_call_end">&#xe02b;</string>
    <string name="ic_call_made">&#xe02c;</string>
    <string name="ic_call_merge">&#xe02d;</string>
    <string name="ic_call_missed">&#xe02e;</string>
    <string name="ic_call_received">&#xe02f;</string>
    <string name="ic_call_split">&#xe030;</string>
    <string name="ic_camera">&#xe031;</string>
    <string name="ic_camera_alt">&#xe032;</string>
    <string name="ic_camera_roll">&#xe033;</string>
    <string name="ic_cancel">&#xe034;</string>
    <string name="ic_cast">&#xe035;</string>
    <string name="ic_cast_connected">&#xe036;</string>
    <string name="ic_chat">&#xe037;</string>
    <string name="ic_check">&#xe038;</string>
    <string name="ic_check_box">&#xe039;</string>
    <string name="ic_check_box_blank">&#xe03a;</string>
    <string name="ic_check_box_outline">&#xe03b;</string>
    <string name="ic_check_box_outline_blank">&#xe03c;</string>
    <string name="ic_check_circle">&#xe03d;</string>
    <string name="ic_check_circle_blank">&#xe03e;</string>
    <string name="ic_check_circle_outline">&#xe03f;</string>
    <string name="ic_check_circle_outline_blank">&#xe040;</string>
    <string name="ic_chevron_left">&#xe041;</string>
    <string name="ic_chevron_right">&#xe042;</string>
    <string name="ic_chromecast">&#xe043;</string>
    <string name="ic_circles">&#xe044;</string>
    <string name="ic_circles_add">&#xe045;</string>
    <string name="ic_circles_extended">&#xe046;</string>
    <string name="ic_clear">&#xe047;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_close_caption">&#xe049;</string>
    <string name="ic_cloud">&#xe04a;</string>
    <string name="ic_cloud_circle">&#xe04b;</string>
    <string name="ic_cloud_done">&#xe04c;</string>
    <string name="ic_cloud_download">&#xe04d;</string>
    <string name="ic_cloud_off">&#xe04e;</string>
    <string name="ic_cloud_queue">&#xe04f;</string>
    <string name="ic_cloud_upload">&#xe050;</string>
    <string name="ic_comment">&#xe051;</string>
    <string name="ic_communities">&#xe052;</string>
    <string name="ic_content_copy">&#xe053;</string>
    <string name="ic_content_cut">&#xe054;</string>
    <string name="ic_content_paste">&#xe055;</string>
    <string name="ic_create">&#xe056;</string>
    <string name="ic_credit_card">&#xe057;</string>
    <string name="ic_crop">&#xe058;</string>
    <string name="ic_crop_free">&#xe059;</string>
    <string name="ic_crop_landscape">&#xe05a;</string>
    <string name="ic_crop_portrait">&#xe05b;</string>
    <string name="ic_crop_square">&#xe05c;</string>
    <string name="ic_data_usage">&#xe05d;</string>
    <string name="ic_delete">&#xe05e;</string>
    <string name="ic_developer_mode">&#xe05f;</string>
    <string name="ic_dialpad">&#xe060;</string>
    <string name="ic_directions">&#xe061;</string>
    <string name="ic_directions_bike">&#xe062;</string>
    <string name="ic_directions_bus">&#xe063;</string>
    <string name="ic_directions_car">&#xe064;</string>
    <string name="ic_directions_subway">&#xe065;</string>
    <string name="ic_directions_train">&#xe066;</string>
    <string name="ic_directions_transit">&#xe067;</string>
    <string name="ic_directionswalk">&#xe068;</string>
    <string name="ic_disc_full">&#xe069;</string>
    <string name="ic_do_not_disturb">&#xe06a;</string>
    <string name="ic_dock">&#xe06b;</string>
    <string name="ic_domain">&#xe06c;</string>
    <string name="ic_done">&#xe06d;</string>
    <string name="ic_done_all">&#xe06e;</string>
    <string name="ic_drafts">&#xe06f;</string>
    <string name="ic_drive">&#xe070;</string>
    <string name="ic_drive_apk">&#xe071;</string>
    <string name="ic_drive_audio">&#xe072;</string>
    <string name="ic_drive_code">&#xe073;</string>
    <string name="ic_drive_document">&#xe074;</string>
    <string name="ic_drive_drawing">&#xe075;</string>
    <string name="ic_drive_eta">&#xe076;</string>
    <string name="ic_drive_file">&#xe077;</string>
    <string name="ic_drive_font">&#xe078;</string>
    <string name="ic_drive_form">&#xe079;</string>
    <string name="ic_drive_fusiontable">&#xe07a;</string>
    <string name="ic_drive_image">&#xe07b;</string>
    <string name="ic_drive_ms_excel">&#xe07c;</string>
    <string name="ic_drive_ms_powerpoint">&#xe07d;</string>
    <string name="ic_drive_ms_word">&#xe07e;</string>
    <string name="ic_drive_pdf">&#xe07f;</string>
    <string name="ic_drive_presentation">&#xe080;</string>
    <string name="ic_drive_script">&#xe081;</string>
    <string name="ic_drive_site">&#xe082;</string>
    <string name="ic_drive_spreadsheet">&#xe083;</string>
    <string name="ic_drive_video">&#xe084;</string>
    <string name="ic_drive_zip">&#xe085;</string>
    <string name="ic_earth">&#xe086;</string>
    <string name="ic_email">&#xe087;</string>
    <string name="ic_error">&#xe088;</string>
    <string name="ic_event">&#xe089;</string>
    <string name="ic_exit_to_app">&#xe08a;</string>
    <string name="ic_expand_less">&#xe08b;</string>
    <string name="ic_expand_more">&#xe08c;</string>
    <string name="ic_explore">&#xe08d;</string>
    <string name="ic_extension">&#xe08e;</string>
    <string name="ic_fast_forward">&#xe08f;</string>
    <string name="ic_fast_rewind">&#xe090;</string>
    <string name="ic_favorite">&#xe091;</string>
    <string name="ic_favorite_outline">&#xe092;</string>
    <string name="ic_file_download">&#xe093;</string>
    <string name="ic_file_upload">&#xe094;</string>
    <string name="ic_filter">&#xe095;</string>
    <string name="ic_flag">&#xe096;</string>
    <string name="ic_flash_auto">&#xe097;</string>
    <string name="ic_flash_off">&#xe098;</string>
    <string name="ic_flash_on">&#xe099;</string>
    <string name="ic_flights">&#xe09a;</string>
    <string name="ic_flip_to_back">&#xe09b;</string>
    <string name="ic_flip_to_front">&#xe09c;</string>
    <string name="ic_folder">&#xe09d;</string>
    <string name="ic_folder_mydrive">&#xe09e;</string>
    <string name="ic_folder_shared">&#xe09f;</string>
    <string name="ic_forum">&#xe0a0;</string>
    <string name="ic_forward">&#xe0a1;</string>
    <string name="ic_fullscreen">&#xe0a2;</string>
</resources>