<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:theme="@style/AppFormTheme"
       >


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/input_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_product_name" />
        </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/input_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_product_price" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_product_shipping_category_id"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/input_product_shipping_category_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_product_shipping_category_id" />
    </android.support.design.widget.TextInputLayout>



    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:gravity="bottom">

        <Button android:id="@+id/btn_create_product"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_create_product"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"/>


    </RelativeLayout>


</LinearLayout>



